intiated: update api fucntuonality
