# backend/docs/swagger.yaml
@@ -8,6 +8,8 @@ definitions:
         type: string
       id:
         type: string
+      isActive:
+        type: boolean
       isbn:
         type: string
       price:
@@ -68,6 +70,21 @@ definitions:
     - email
     - name
     - password
+    type: object
+  adapters.UpdateBookRequest:
+    properties:
+      author:
+        type: string
+      description:
+        type: string
+      isbn:
+        type: string
+      price:
+        type: number
+      stock:
+        type: integer
+      title:
+        type: string
     type: object
   adapters.User:
     properties:
@@ -204,6 +221,36 @@ paths:
           schema:
             type: object
       summary: Get a book by UUID or ISBN
+      tags:
+      - Books
+    put:
+      consumes:
+      - application/json
+      description: Update a book by UUID or ISBN identifier
+      parameters:
+      - description: Book UUID or ISBN
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Book Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/adapters.UpdateBookRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/adapters.Book'
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+      summary: Update a book
       tags:
       - Books
   /api/v1/users/{keyword}:
